--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <canvas id="canvas">We are using canvas here, so you better get a browser that supports it ...</canvas>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
